--- a/templates/flatpages/about.html
+++ b/templates/flatpages/about.html
@@ -11,4 +11,8 @@
     {{ flatpage.content }}
     <br>
     {{ flatpage.content }}
+    <br>
+    <a href="/info">info</a>
+    <a href="/contacts">contacts</a>
+    <a href="/about">about</a>
 {% endblock content %}
