--- a/templates/flatpages/contacts.html
+++ b/templates/flatpages/contacts.html
@@ -9,4 +9,8 @@
     <hr>
     <h3>Наши контакты:</h3>
     <i>{{ flatpage.content }} </i>
+    <br>
+    <a href="/info">info</a>
+    <a href="/contacts">contacts</a>
+    <a href="/about">about</a>
 {% endblock content %}
