--- a/templates/flatpages/info.html
+++ b/templates/flatpages/info.html
@@ -9,4 +9,8 @@
     <hr>
     <h1>Информация</h1>
     <p style="color: blue; font-family: 'Courier New', Courier, monospace; font-size: large;">{{ flatpage.content }}</p>
+    <br>
+    <a href="/info">info</a>
+    <a href="/contacts">contacts</a>
+    <a href="/about">about</a>
 {% endblock content %}
